// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries service when creating a new log entry will create a new log entry with all options 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1210,
      "hePercent": undefined,
      "material": "fe",
      "name": "ornate parcel",
      "o2Percent": 25.6,
      "pressureUnit": "psi",
      "startPressure": 3470,
      "volume": 12,
      "workingPressure": 3000,
    },
  ],
  "conditions": {
    "airTemperature": 28,
    "bottomTemperature": 24,
    "chop": 2,
    "current": 3,
    "surfaceTemperature": 26,
    "temperatureUnit": "C",
    "visibility": 4.8,
    "weather": "Sunny with some clouds",
  },
  "createdAt": 2024-07-23T11:39:57.073Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 2020-02-24T22:30:50.944Z,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 45,
    "depthUnit": "ft",
    "maxDepth": 67,
  },
  "equipment": {
    "boots": true,
    "camera": false,
    "exposureSuit": "drysuit",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": false,
    "trimCorrectness": "good",
    "weight": 4.4,
    "weightCorrectness": "over",
    "weightUnit": "kg",
  },
  "id": "3e238287-519a-4a65-bc57-afe0c6cd9ced",
  "logNumber": 123,
  "notes": "Great dive! Saw fish.",
  "site": undefined,
  "tags": [],
  "timing": {
    "bottomTime": 2880,
    "duration": 3120,
    "entryTime": {
      "date": "2024-03-28T13:45:00",
      "timezone": "Europe/Amsterdam",
    },
  },
  "updatedAt": 2024-07-23T14:22:09.372Z,
}
`;

exports[`Log entries service when listing log entries will perform a basic search 1`] = `
[
  {
    "air": [],
    "entryTime": {
      "date": "2024-07-22T14:35:19",
      "timezone": "Asia/Yakutsk",
    },
    "id": "6c79010b-564e-43c3-b46d-dc1727573237",
    "site": "good-natured bountiful relay",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-07-21T05:17:29",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "f8617b1a-dca9-4a6a-b7f6-656147977c11",
    "site": "tattered worn graffiti",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-07-21T02:48:32",
      "timezone": "Africa/Ndjamena",
    },
    "id": "aa5fb198-782e-4eb3-95c3-14354e0b9911",
    "site": "deadly idealistic gerbil",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-07-17T00:54:29",
      "timezone": "Africa/Bangui",
    },
    "id": "5c024ea3-1f23-4dab-ba03-00b01c605d4a",
    "site": "piercing joyful hospitality",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-30T16:43:52",
      "timezone": "America/Winnipeg",
    },
    "id": "5b73b780-6a22-4411-b152-10b7143c104d",
    "site": "silky sharp brilliant",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-30T10:07:41",
      "timezone": "America/Asuncion",
    },
    "id": "7c1b840c-033f-4d92-b3e5-59d5253997c2",
    "site": "gloomy acceptable hummus",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-29T11:12:20",
      "timezone": "Asia/Bishkek",
    },
    "id": "5d963469-e10f-4d54-bcea-96d90b38e80f",
    "site": "spotless gifted gallon",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-25T05:38:18",
      "timezone": "Australia/Adelaide",
    },
    "id": "13a27848-8720-4961-be84-647adc581c7e",
    "site": "graceful rich contrail",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-22T17:24:30",
      "timezone": "Atlantic/Reykjavik",
    },
    "id": "e1242310-8e3b-489b-a071-b6daa0741210",
    "site": "tall trivial clause",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-20T23:22:14",
      "timezone": "America/Hermosillo",
    },
    "id": "0b603579-3cf0-4118-9d17-ef46ae396d49",
    "site": "scornful well-worn baggage",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-20T16:26:31",
      "timezone": "America/Argentina/La_Rioja",
    },
    "id": "05e6545e-fba2-4426-93c1-f40db7ecad8f",
    "site": "major limping airbag",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-16T15:58:20",
      "timezone": "Asia/Singapore",
    },
    "id": "14b4a3b3-c8b4-4949-87a1-66ad17a5681f",
    "site": "frizzy excited outback",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-15T13:24:04",
      "timezone": "Antarctica/Palmer",
    },
    "id": "093c7a96-cdd0-4324-8989-78f8a5f9cc96",
    "site": "tattered worn graffiti",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-14T00:22:34",
      "timezone": "Asia/Sakhalin",
    },
    "id": "3a99c02e-d580-4648-a6ed-ace263795ea8",
    "site": "giant broken meat",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-12T06:35:21",
      "timezone": "Asia/Kamchatka",
    },
    "id": "f9168957-a5f1-466b-83ff-8764d139dce7",
    "site": "intelligent greedy monster",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-12T05:16:30",
      "timezone": "Europe/Vatican",
    },
    "id": "7ca83221-a175-4469-9db9-20c5332bc0e2",
    "site": "gruesome welcome expense",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-08T11:19:32",
      "timezone": "Europe/Simferopol",
    },
    "id": "394fb770-0b2a-4c70-ad2a-629bb861a76c",
    "site": "steep aromatic broccoli",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-06-06T06:27:56",
      "timezone": "Asia/Ust-Nera",
    },
    "id": "d4bfece9-772d-4d40-91f7-42e810895289",
    "site": "grounded lost vendor",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-30T07:21:24",
      "timezone": "America/New_York",
    },
    "id": "f264b411-5040-4642-83ca-161a8da5529c",
    "site": "stormy strict fries",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-25T18:42:23",
      "timezone": "Pacific/Kiritimati",
    },
    "id": "df9f7077-ba9d-4359-95b2-6046aeea5767",
    "site": "untidy puzzled birth",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-23T11:21:32",
      "timezone": "America/Rio_Branco",
    },
    "id": "cea6ee94-c6e6-4031-9f36-110638dd9dc0",
    "site": "unruly angry suppression",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-12T06:40:31",
      "timezone": "America/Juneau",
    },
    "id": "a7aea7c9-2fce-4d6d-8a05-a712944de218",
    "site": "wise gullible administrator",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-06T12:07:16",
      "timezone": "Africa/Nouakchott",
    },
    "id": "ee2885fe-5d8e-416c-9af3-d90b26c60a41",
    "site": "apt colossal initial",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-06T07:55:57",
      "timezone": "America/Halifax",
    },
    "id": "c4292abd-1d6c-4fe1-a00a-a013dc43829f",
    "site": "lost profuse garlic",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-05-01T17:41:56",
      "timezone": "Africa/Kigali",
    },
    "id": "3612def5-8537-40c8-9c91-f38640516d58",
    "site": "jumpy canine antechamber",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-23T15:24:20",
      "timezone": "Asia/Phnom_Penh",
    },
    "id": "1308b043-6eed-4aba-9932-af48e53e3a43",
    "site": "good-natured bountiful relay",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-19T23:24:15",
      "timezone": "Pacific/Galapagos",
    },
    "id": "2aa9d0cc-d01e-4edd-aee7-e1fb725625fa",
    "site": "friendly criminal waffle",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-19T00:30:49",
      "timezone": "Europe/Oslo",
    },
    "id": "4f0dbd6d-184d-41c3-8385-75fa14148370",
    "site": "thoughtful lumpy quotation",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-15T21:44:58",
      "timezone": "Arctic/Longyearbyen",
    },
    "id": "89f12c10-e1e3-4da9-902d-d2f1e4773dfd",
    "site": "cultured pointless glass",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-12T06:08:04",
      "timezone": "Europe/Monaco",
    },
    "id": "fe25d3fa-3df0-49a1-aa80-911220cbd734",
    "site": "rude ajar aggradation",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-10T17:36:28",
      "timezone": "Asia/Brunei",
    },
    "id": "942c23da-816d-46ca-abc8-f513f21b9356",
    "site": "dark heavy boss",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-01T22:51:21",
      "timezone": "Africa/Algiers",
    },
    "id": "e786d59e-b8c3-4a69-bf73-227f21232044",
    "site": "mundane known blocker",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-04-01T14:11:06",
      "timezone": "Asia/Khandyga",
    },
    "id": "5b78cfb5-0b1f-493e-a58e-fbe668466489",
    "site": "definitive tart hierarchy",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-29T19:46:17",
      "timezone": "Asia/Baku",
    },
    "id": "8f764090-c254-4ad6-a762-6ce2e1166b4d",
    "site": "shameful glorious noodles",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-24T16:42:13",
      "timezone": "America/Winnipeg",
    },
    "id": "a08fa86a-2bd6-4f2c-b6e4-a61b573f77f8",
    "site": "quiet complete current",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-24T15:35:28",
      "timezone": "America/Grenada",
    },
    "id": "7772621c-d8aa-4a83-aca1-962eefa14360",
    "site": "phony even pass",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-24T00:50:37",
      "timezone": "Antarctica/Davis",
    },
    "id": "b1f35ab1-ab10-44b8-b208-65181b43a8ba",
    "site": "legal incomplete trachoma",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-15T16:17:20",
      "timezone": "America/Santiago",
    },
    "id": "d6757ff5-e1ee-470d-aacd-168c9508c838",
    "site": "keen specific comedy",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-12T06:19:08",
      "timezone": "Pacific/Chatham",
    },
    "id": "bc80a1ed-8d16-4db6-87ae-5542c15d687b",
    "site": "awkward limping hard-hat",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-10T15:39:44",
      "timezone": "America/Bahia",
    },
    "id": "de6ab3e2-e969-4b57-a267-f9ceb7ac6336",
    "site": "reflecting handsome chalk",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-03-04T11:15:33",
      "timezone": "Europe/Amsterdam",
    },
    "id": "365c367e-857e-4dac-8029-aded02c0a258",
    "site": "cultured pointless glass",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-29T21:38:04",
      "timezone": "America/Havana",
    },
    "id": "593bca2e-9d2a-4a35-9e5c-514a5cb14f66",
    "site": "apt pastel moai",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-27T21:57:44",
      "timezone": "America/Grenada",
    },
    "id": "a6eba206-2c71-46c2-aaee-027c80479bce",
    "site": "concerned specific printing",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-27T12:40:17",
      "timezone": "Australia/Sydney",
    },
    "id": "f4383674-c416-4448-8b21-7ab5f36784ad",
    "site": "bustling normal convert",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-25T22:55:28",
      "timezone": "Asia/Gaza",
    },
    "id": "bd9b723e-5633-42c9-9e73-24a155d5ce60",
    "site": "phony even pass",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-22T19:17:20",
      "timezone": "America/Port-au-Prince",
    },
    "id": "83c07ad6-2eaa-452c-8377-14847c443c24",
    "site": "humble crazy cockpit",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-22T16:25:14",
      "timezone": "Asia/Yakutsk",
    },
    "id": "777bfe88-2edc-4093-9249-6ff62c87d7fc",
    "site": "sympathetic mortified taxicab",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-22T11:44:06",
      "timezone": "Africa/Abidjan",
    },
    "id": "80a06a52-8221-4c11-a4c5-ac9c5eb5fbc5",
    "site": "cultured illiterate acid",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-18T16:10:08",
      "timezone": "Asia/Dili",
    },
    "id": "b69cc091-7a89-464c-a1fb-8348fdf55c4d",
    "site": "specific dead ramen",
  },
  {
    "air": [],
    "entryTime": {
      "date": "2024-02-15T01:17:49",
      "timezone": "America/Nassau",
    },
    "id": "2c35ae91-9cc9-427a-b7b8-1af4b1179e73",
    "site": "voluminous good-natured antiquity",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries after a start date 1`] = `
[
  {
    "entryTime": {
      "date": "2024-07-22T14:35:19",
      "timezone": "Asia/Yakutsk",
    },
    "id": "6c79010b-564e-43c3-b46d-dc1727573237",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-07-21T05:17:29",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "f8617b1a-dca9-4a6a-b7f6-656147977c11",
    "site": "tattered worn graffiti",
  },
  {
    "entryTime": {
      "date": "2024-07-21T02:48:32",
      "timezone": "Africa/Ndjamena",
    },
    "id": "aa5fb198-782e-4eb3-95c3-14354e0b9911",
    "site": "deadly idealistic gerbil",
  },
  {
    "entryTime": {
      "date": "2024-07-17T00:54:29",
      "timezone": "Africa/Bangui",
    },
    "id": "5c024ea3-1f23-4dab-ba03-00b01c605d4a",
    "site": "piercing joyful hospitality",
  },
  {
    "entryTime": {
      "date": "2024-06-30T16:43:52",
      "timezone": "America/Winnipeg",
    },
    "id": "5b73b780-6a22-4411-b152-10b7143c104d",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": {
      "date": "2024-06-30T10:07:41",
      "timezone": "America/Asuncion",
    },
    "id": "7c1b840c-033f-4d92-b3e5-59d5253997c2",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-06-29T11:12:20",
      "timezone": "Asia/Bishkek",
    },
    "id": "5d963469-e10f-4d54-bcea-96d90b38e80f",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2024-06-25T05:38:18",
      "timezone": "Australia/Adelaide",
    },
    "id": "13a27848-8720-4961-be84-647adc581c7e",
    "site": "graceful rich contrail",
  },
  {
    "entryTime": {
      "date": "2024-06-22T17:24:30",
      "timezone": "Atlantic/Reykjavik",
    },
    "id": "e1242310-8e3b-489b-a071-b6daa0741210",
    "site": "tall trivial clause",
  },
  {
    "entryTime": {
      "date": "2024-06-20T23:22:14",
      "timezone": "America/Hermosillo",
    },
    "id": "0b603579-3cf0-4118-9d17-ef46ae396d49",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2024-06-20T16:26:31",
      "timezone": "America/Argentina/La_Rioja",
    },
    "id": "05e6545e-fba2-4426-93c1-f40db7ecad8f",
    "site": "major limping airbag",
  },
  {
    "entryTime": {
      "date": "2024-06-16T15:58:20",
      "timezone": "Asia/Singapore",
    },
    "id": "14b4a3b3-c8b4-4949-87a1-66ad17a5681f",
    "site": "frizzy excited outback",
  },
  {
    "entryTime": {
      "date": "2024-06-15T13:24:04",
      "timezone": "Antarctica/Palmer",
    },
    "id": "093c7a96-cdd0-4324-8989-78f8a5f9cc96",
    "site": "tattered worn graffiti",
  },
  {
    "entryTime": {
      "date": "2024-06-14T00:22:34",
      "timezone": "Asia/Sakhalin",
    },
    "id": "3a99c02e-d580-4648-a6ed-ace263795ea8",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2024-06-12T06:35:21",
      "timezone": "Asia/Kamchatka",
    },
    "id": "f9168957-a5f1-466b-83ff-8764d139dce7",
    "site": "intelligent greedy monster",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries before an end date 1`] = `
[
  {
    "entryTime": {
      "date": "2023-09-25T12:59:10",
      "timezone": "Pacific/Tongatapu",
    },
    "id": "9d68ec7d-f432-4cb5-aab4-121978faa47a",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2023-09-22T23:18:01",
      "timezone": "America/Atikokan",
    },
    "id": "a253f12a-38bd-4c57-8df9-4f50482352ed",
    "site": "delightful female toad",
  },
  {
    "entryTime": {
      "date": "2023-09-16T07:31:17",
      "timezone": "Europe/San_Marino",
    },
    "id": "a3bea3e7-55e5-48af-af39-667248993d5f",
    "site": "splendid vital wound",
  },
  {
    "entryTime": {
      "date": "2023-09-09T17:52:08",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "22387685-efdc-4e62-a6c4-ad5ac55fec97",
    "site": "wry boring examiner",
  },
  {
    "entryTime": {
      "date": "2023-09-08T07:54:19",
      "timezone": "Asia/Kuching",
    },
    "id": "089f13d1-e100-4a92-9103-d93103a3eb22",
    "site": "vicious difficult skean",
  },
  {
    "entryTime": {
      "date": "2023-08-27T05:43:43",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "3a9485b2-2888-442c-87e3-4a0cb75830ba",
    "site": "visible friendly nonconformist",
  },
  {
    "entryTime": {
      "date": "2023-08-27T00:59:05",
      "timezone": "Pacific/Pago_Pago",
    },
    "id": "7ba7e06a-4f2a-49db-9ad9-789370679815",
    "site": "defiant thorny knife-edge",
  },
  {
    "entryTime": {
      "date": "2023-08-22T22:17:29",
      "timezone": "Australia/Brisbane",
    },
    "id": "298d086c-d25d-40a6-9127-cb112192017f",
    "site": "rapid flustered revenue",
  },
  {
    "entryTime": {
      "date": "2023-08-10T20:04:15",
      "timezone": "America/Dawson",
    },
    "id": "3cf8fb11-544e-473d-b239-71054fa34380",
    "site": "cultured illiterate acid",
  },
  {
    "entryTime": {
      "date": "2023-08-07T19:46:03",
      "timezone": "America/St_Kitts",
    },
    "id": "4fde5a4c-ddeb-4f00-9bf1-6339e5bcd2ed",
    "site": "unwelcome exemplary alpaca",
  },
  {
    "entryTime": {
      "date": "2023-08-02T21:55:38",
      "timezone": "Asia/Tashkent",
    },
    "id": "590e8a08-1da6-4350-9c9a-fb7e1b2395cb",
    "site": "likable infamous scimitar",
  },
  {
    "entryTime": {
      "date": "2023-08-02T18:52:29",
      "timezone": "Asia/Yangon",
    },
    "id": "dbbadc14-9510-46e3-a5c6-f9d3a5632efc",
    "site": "internal crisp trove",
  },
  {
    "entryTime": {
      "date": "2023-07-27T10:10:31",
      "timezone": "America/Inuvik",
    },
    "id": "2043fbfb-79fd-438c-b0ba-0457f2488d93",
    "site": "knowledgeable oily sweatshirt",
  },
  {
    "entryTime": {
      "date": "2023-07-25T11:03:59",
      "timezone": "Asia/Amman",
    },
    "id": "3bd1cd41-6ed6-42f7-a1cd-8f0eafa03ed7",
    "site": "snarling round astrolabe",
  },
  {
    "entryTime": {
      "date": "2023-07-24T22:43:29",
      "timezone": "Atlantic/Cape_Verde",
    },
    "id": "9e71ec55-05d0-466c-a5c3-5e986cec0264",
    "site": "intelligent greedy monster",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries belonging to a specific diver 1`] = `
[
  {
    "entryTime": {
      "date": "2024-07-22T14:35:19",
      "timezone": "Asia/Yakutsk",
    },
    "id": "6c79010b-564e-43c3-b46d-dc1727573237",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-06-30T16:43:52",
      "timezone": "America/Winnipeg",
    },
    "id": "5b73b780-6a22-4411-b152-10b7143c104d",
    "owner": "Ayla.Rippin",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": {
      "date": "2024-06-30T10:07:41",
      "timezone": "America/Asuncion",
    },
    "id": "7c1b840c-033f-4d92-b3e5-59d5253997c2",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-06-29T11:12:20",
      "timezone": "Asia/Bishkek",
    },
    "id": "5d963469-e10f-4d54-bcea-96d90b38e80f",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2024-06-20T23:22:14",
      "timezone": "America/Hermosillo",
    },
    "id": "0b603579-3cf0-4118-9d17-ef46ae396d49",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2024-06-14T00:22:34",
      "timezone": "Asia/Sakhalin",
    },
    "id": "3a99c02e-d580-4648-a6ed-ace263795ea8",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2024-06-08T11:19:32",
      "timezone": "Europe/Simferopol",
    },
    "id": "394fb770-0b2a-4c70-ad2a-629bb861a76c",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2024-05-06T12:07:16",
      "timezone": "Africa/Nouakchott",
    },
    "id": "ee2885fe-5d8e-416c-9af3-d90b26c60a41",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2024-05-06T07:55:57",
      "timezone": "America/Halifax",
    },
    "id": "c4292abd-1d6c-4fe1-a00a-a013dc43829f",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": {
      "date": "2024-04-23T15:24:20",
      "timezone": "Asia/Phnom_Penh",
    },
    "id": "1308b043-6eed-4aba-9932-af48e53e3a43",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-04-12T06:08:04",
      "timezone": "Europe/Monaco",
    },
    "id": "fe25d3fa-3df0-49a1-aa80-911220cbd734",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2024-03-29T19:46:17",
      "timezone": "Asia/Baku",
    },
    "id": "8f764090-c254-4ad6-a762-6ce2e1166b4d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2024-03-24T00:50:37",
      "timezone": "Antarctica/Davis",
    },
    "id": "b1f35ab1-ab10-44b8-b208-65181b43a8ba",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": {
      "date": "2024-02-27T12:40:17",
      "timezone": "Australia/Sydney",
    },
    "id": "f4383674-c416-4448-8b21-7ab5f36784ad",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2024-02-22T19:17:20",
      "timezone": "America/Port-au-Prince",
    },
    "id": "83c07ad6-2eaa-452c-8377-14847c443c24",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2024-02-22T16:25:14",
      "timezone": "Asia/Yakutsk",
    },
    "id": "777bfe88-2edc-4093-9249-6ff62c87d7fc",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": {
      "date": "2024-02-18T16:10:08",
      "timezone": "Asia/Dili",
    },
    "id": "b69cc091-7a89-464c-a1fb-8348fdf55c4d",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-01-28T19:38:33",
      "timezone": "America/Belem",
    },
    "id": "1ad7a960-ee20-4b69-8762-67ddf939f5c1",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-12-29T08:14:25",
      "timezone": "America/Mazatlan",
    },
    "id": "15701e41-4126-4f22-bf9d-10dcafea8276",
    "owner": "Ayla.Rippin",
    "site": "frequent realistic paramedic",
  },
  {
    "entryTime": {
      "date": "2023-12-26T17:04:38",
      "timezone": "America/Detroit",
    },
    "id": "f39774ee-0d59-49ba-8bbb-f59a45fd1bf2",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries between a start date and end date 1`] = `
[
  {
    "entryTime": {
      "date": "2023-09-25T12:59:10",
      "timezone": "Pacific/Tongatapu",
    },
    "id": "9d68ec7d-f432-4cb5-aab4-121978faa47a",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2023-09-22T23:18:01",
      "timezone": "America/Atikokan",
    },
    "id": "a253f12a-38bd-4c57-8df9-4f50482352ed",
    "site": "delightful female toad",
  },
  {
    "entryTime": {
      "date": "2023-09-16T07:31:17",
      "timezone": "Europe/San_Marino",
    },
    "id": "a3bea3e7-55e5-48af-af39-667248993d5f",
    "site": "splendid vital wound",
  },
  {
    "entryTime": {
      "date": "2023-09-09T17:52:08",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "22387685-efdc-4e62-a6c4-ad5ac55fec97",
    "site": "wry boring examiner",
  },
  {
    "entryTime": {
      "date": "2023-09-08T07:54:19",
      "timezone": "Asia/Kuching",
    },
    "id": "089f13d1-e100-4a92-9103-d93103a3eb22",
    "site": "vicious difficult skean",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search with pagination 1`] = `
[
  {
    "entryTime": {
      "date": "2024-02-07T02:45:28",
      "timezone": "America/Nome",
    },
    "id": "048b9b22-9f58-478a-8960-c9521c514547",
    "site": "frugal monstrous title",
  },
  {
    "entryTime": {
      "date": "2024-02-06T02:37:02",
      "timezone": "America/Maceio",
    },
    "id": "11fc2683-017b-46f9-b3cd-c67ded447a58",
    "site": "earnest stingy metro",
  },
  {
    "entryTime": {
      "date": "2024-02-04T20:04:33",
      "timezone": "Antarctica/Syowa",
    },
    "id": "0063d418-9884-44b5-8a8f-2e00c95d7d0a",
    "site": "youthful numb glow",
  },
  {
    "entryTime": {
      "date": "2024-02-02T00:59:18",
      "timezone": "Asia/Qostanay",
    },
    "id": "a7348ae4-3a55-477e-91d9-35db1a6079f9",
    "site": "earnest stingy metro",
  },
  {
    "entryTime": {
      "date": "2024-01-28T19:38:33",
      "timezone": "America/Belem",
    },
    "id": "1ad7a960-ee20-4b69-8762-67ddf939f5c1",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2024-01-25T18:40:54",
      "timezone": "America/Los_Angeles",
    },
    "id": "891b5949-66ec-427a-b827-38d836db70c6",
    "site": "mixed honest workforce",
  },
  {
    "entryTime": {
      "date": "2024-01-20T23:53:54",
      "timezone": "Europe/Vienna",
    },
    "id": "b75e7ec6-43f0-4f5c-abe0-811d61699ebe",
    "site": "avaricious flamboyant subtitle",
  },
  {
    "entryTime": {
      "date": "2024-01-20T04:29:48",
      "timezone": "Africa/Asmara",
    },
    "id": "bed71448-f1f6-410f-af7b-5e0c59e12c08",
    "site": "mixed honest workforce",
  },
  {
    "entryTime": {
      "date": "2024-01-13T15:15:55",
      "timezone": "Pacific/Nauru",
    },
    "id": "cdf99b3b-07f4-46eb-8d9e-6688772697a2",
    "site": "second pleasing berry",
  },
  {
    "entryTime": {
      "date": "2024-01-03T20:57:19",
      "timezone": "America/Chihuahua",
    },
    "id": "9bfaa432-eac5-4656-9e4d-623dcb0df4d6",
    "site": "aromatic steel walrus",
  },
]
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "asc" order 1`] = `
[
  {
    "entryTime": {
      "date": "2021-07-24T19:39:57",
      "timezone": "America/Moncton",
    },
    "id": "914492bd-ed7e-4434-aa96-35140276a67d",
    "site": "carefree fussy crewman",
  },
  {
    "entryTime": {
      "date": "2021-07-29T19:37:16",
      "timezone": "Asia/Kuwait",
    },
    "id": "6286b26b-3d4b-4049-bff9-80fca95091ed",
    "site": "peaceful well-worn intention",
  },
  {
    "entryTime": {
      "date": "2021-08-01T16:43:13",
      "timezone": "Antarctica/DumontDUrville",
    },
    "id": "eacb923a-d0a5-42d8-bfc5-e6befed5143b",
    "site": "acidic similar juggernaut",
  },
  {
    "entryTime": {
      "date": "2021-08-04T23:55:59",
      "timezone": "America/Kralendijk",
    },
    "id": "b9da37d0-be78-449a-a0fe-0777a5d382bc",
    "site": "gruesome welcome expense",
  },
  {
    "entryTime": {
      "date": "2021-08-09T19:13:17",
      "timezone": "Africa/El_Aaiun",
    },
    "id": "e855d72d-0fc7-4730-9df0-7b59e8437a21",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": {
      "date": "2021-08-16T22:43:15",
      "timezone": "America/Nassau",
    },
    "id": "dc7d1770-cabe-421e-acd4-b9a810313baf",
    "site": "exhausted wretched cyclone",
  },
  {
    "entryTime": {
      "date": "2021-08-23T18:26:06",
      "timezone": "Pacific/Pitcairn",
    },
    "id": "47c85dff-2ce5-4d42-9112-9f94956d1bc8",
    "site": "wonderful useful magnet",
  },
  {
    "entryTime": {
      "date": "2021-08-29T07:13:11",
      "timezone": "Asia/Damascus",
    },
    "id": "e036981b-9e4d-45e4-b2d3-a326065413e4",
    "site": "mild mixed crewman",
  },
  {
    "entryTime": {
      "date": "2021-08-30T01:20:02",
      "timezone": "America/Punta_Arenas",
    },
    "id": "89ac8349-b5ec-4c3f-be69-80724c7a5f16",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2021-08-31T01:37:51",
      "timezone": "America/Moncton",
    },
    "id": "fd898ead-7fec-4163-97d8-fe340741e8a5",
    "site": "modern sorrowful girdle",
  },
]
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "desc" order 1`] = `
[
  {
    "entryTime": {
      "date": "2024-07-22T14:35:19",
      "timezone": "Asia/Yakutsk",
    },
    "id": "6c79010b-564e-43c3-b46d-dc1727573237",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2024-07-21T05:17:29",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "f8617b1a-dca9-4a6a-b7f6-656147977c11",
    "site": "tattered worn graffiti",
  },
  {
    "entryTime": {
      "date": "2024-07-21T02:48:32",
      "timezone": "Africa/Ndjamena",
    },
    "id": "aa5fb198-782e-4eb3-95c3-14354e0b9911",
    "site": "deadly idealistic gerbil",
  },
  {
    "entryTime": {
      "date": "2024-07-17T00:54:29",
      "timezone": "Africa/Bangui",
    },
    "id": "5c024ea3-1f23-4dab-ba03-00b01c605d4a",
    "site": "piercing joyful hospitality",
  },
  {
    "entryTime": {
      "date": "2024-06-30T16:43:52",
      "timezone": "America/Winnipeg",
    },
    "id": "5b73b780-6a22-4411-b152-10b7143c104d",
    "site": "silky sharp brilliant",
  },
  {
    "entryTime": {
      "date": "2024-06-30T10:07:41",
      "timezone": "America/Asuncion",
    },
    "id": "7c1b840c-033f-4d92-b3e5-59d5253997c2",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-06-29T11:12:20",
      "timezone": "Asia/Bishkek",
    },
    "id": "5d963469-e10f-4d54-bcea-96d90b38e80f",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2024-06-25T05:38:18",
      "timezone": "Australia/Adelaide",
    },
    "id": "13a27848-8720-4961-be84-647adc581c7e",
    "site": "graceful rich contrail",
  },
  {
    "entryTime": {
      "date": "2024-06-22T17:24:30",
      "timezone": "Atlantic/Reykjavik",
    },
    "id": "e1242310-8e3b-489b-a071-b6daa0741210",
    "site": "tall trivial clause",
  },
  {
    "entryTime": {
      "date": "2024-06-20T23:22:14",
      "timezone": "America/Hermosillo",
    },
    "id": "0b603579-3cf0-4118-9d17-ef46ae396d49",
    "site": "scornful well-worn baggage",
  },
]
`;

exports[`Log entries service when listing recent dive sites will return a distinct list of the most recently used dive sites 1`] = `
[
  {
    "id": "d7de84b7-130f-4d3c-be13-bff50cd40596",
    "name": "apt colossal initial",
  },
  {
    "id": "b9cd677a-d240-403d-9dab-620dec47451d",
    "name": "giant broken meat",
  },
  {
    "id": "f92f8727-7c36-46bf-b282-8f02f9ebe968",
    "name": "gloomy acceptable hummus",
  },
  {
    "id": "5f799498-2730-452f-b78b-933510c1174c",
    "name": "good-natured bountiful relay",
  },
  {
    "id": "81162750-b95e-4ac5-97e3-d8a5d42ed48c",
    "name": "legal incomplete trachoma",
  },
  {
    "id": "2c8f33c5-8775-4a84-906b-bbf218b176fd",
    "name": "lost profuse garlic",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "ff54a265-50e4-4051-a30b-d0aae3b2f178",
    "name": "scornful well-worn baggage",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "1561e4a5-8777-433a-9e9d-e8a07452ce88",
    "name": "silky sharp brilliant",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "60c05ea8-b642-48cf-a2f3-39e7eb2bc8b5",
    "name": "steep aromatic broccoli",
  },
]
`;

exports[`Log entries service when retrieving a single log entry will retrieve a log entry belonging to a specific user 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 48.50097664538771,
      "hePercent": undefined,
      "material": "fe",
      "name": "live fundraising",
      "o2Percent": 40,
      "pressureUnit": "bar",
      "startPressure": 228.86165590956807,
      "volume": 4,
      "workingPressure": 182,
    },
  ],
  "conditions": {
    "airTemperature": 10.1,
    "bottomTemperature": 16.7,
    "chop": 1.5,
    "current": 3.9,
    "surfaceTemperature": 16.7,
    "temperatureUnit": "C",
    "visibility": undefined,
    "weather": undefined,
  },
  "createdAt": 2023-02-15T01:23:32.000Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
    "location": "Cape Coral",
    "logBookSharing": "private",
    "memberSince": 2022-03-28T18:30:41.189Z,
    "name": "Johnnie Abernathy",
    "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
    "username": "Reina54",
  },
  "depths": {
    "averageDepth": undefined,
    "depthUnit": "m",
    "maxDepth": 25.17,
  },
  "equipment": {
    "boots": true,
    "camera": true,
    "exposureSuit": "3mm",
    "gloves": true,
    "hood": false,
    "scooter": true,
    "torch": true,
    "trimCorrectness": undefined,
    "weight": undefined,
    "weightCorrectness": "under",
    "weightUnit": "kg",
  },
  "id": "936b49e7-c3e8-4f79-8144-ec159f1a8d27",
  "logNumber": undefined,
  "notes": "Arbitro sordeo conqueror. Quam ea adficio. Comitatus eligendi claustrum curvo amaritudo velit.",
  "site": {
    "averageDifficulty": 2.89,
    "averageRating": 1.48,
    "createdOn": 2024-01-23T09:42:26.453Z,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
      "location": "Cape Coral",
      "logBookSharing": "private",
      "memberSince": 2022-03-28T18:30:41.189Z,
      "name": "Johnnie Abernathy",
      "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
      "username": "Reina54",
    },
    "depth": {
      "depth": 10.58,
      "unit": "ft",
    },
    "description": "Adipiscor verus theologus chirographum cimentarius benigne tamquam occaecati corona. Tam verbum audacia. Aureus tolero acerbitas virgo impedit.",
    "directions": "Desidero apto colligo. Careo cado stips benigne demum ascisco atrox ocer magnam decumbo. Aegrotatio quo paens tenetur.",
    "freeToDive": true,
    "gps": {
      "lat": -2.7163,
      "lon": -96.1687,
    },
    "id": "791f3ca0-30b6-4637-b7a5-c2374515f2b3",
    "location": "Redlands",
    "name": "untrue sparse comics",
    "shoreAccess": undefined,
    "updatedOn": 2024-05-27T07:14:30.481Z,
    "waterType": "mixed",
  },
  "tags": [],
  "timing": {
    "bottomTime": 3694,
    "duration": 4064,
    "entryTime": {
      "date": "2023-02-14T20:23:32",
      "timezone": "America/Anguilla",
    },
  },
  "updatedAt": undefined,
}
`;

exports[`Log entries service when retrieving a single log entry will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 48.50097664538771,
      "hePercent": undefined,
      "material": "fe",
      "name": "live fundraising",
      "o2Percent": 40,
      "pressureUnit": "bar",
      "startPressure": 228.86165590956807,
      "volume": 4,
      "workingPressure": 182,
    },
  ],
  "conditions": {
    "airTemperature": 10.1,
    "bottomTemperature": 16.7,
    "chop": 1.5,
    "current": 3.9,
    "surfaceTemperature": 16.7,
    "temperatureUnit": "C",
    "visibility": undefined,
    "weather": undefined,
  },
  "createdAt": 2023-02-15T01:23:32.000Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
    "location": "Cape Coral",
    "logBookSharing": "private",
    "memberSince": 2022-03-28T18:30:41.189Z,
    "name": "Johnnie Abernathy",
    "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
    "username": "Reina54",
  },
  "depths": {
    "averageDepth": undefined,
    "depthUnit": "m",
    "maxDepth": 25.17,
  },
  "equipment": {
    "boots": true,
    "camera": true,
    "exposureSuit": "3mm",
    "gloves": true,
    "hood": false,
    "scooter": true,
    "torch": true,
    "trimCorrectness": undefined,
    "weight": undefined,
    "weightCorrectness": "under",
    "weightUnit": "kg",
  },
  "id": "936b49e7-c3e8-4f79-8144-ec159f1a8d27",
  "logNumber": undefined,
  "notes": "Arbitro sordeo conqueror. Quam ea adficio. Comitatus eligendi claustrum curvo amaritudo velit.",
  "site": {
    "averageDifficulty": 2.89,
    "averageRating": 1.48,
    "createdOn": 2024-01-23T09:42:26.453Z,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
      "location": "Cape Coral",
      "logBookSharing": "private",
      "memberSince": 2022-03-28T18:30:41.189Z,
      "name": "Johnnie Abernathy",
      "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
      "username": "Reina54",
    },
    "depth": {
      "depth": 10.58,
      "unit": "ft",
    },
    "description": "Adipiscor verus theologus chirographum cimentarius benigne tamquam occaecati corona. Tam verbum audacia. Aureus tolero acerbitas virgo impedit.",
    "directions": "Desidero apto colligo. Careo cado stips benigne demum ascisco atrox ocer magnam decumbo. Aegrotatio quo paens tenetur.",
    "freeToDive": true,
    "gps": {
      "lat": -2.7163,
      "lon": -96.1687,
    },
    "id": "791f3ca0-30b6-4637-b7a5-c2374515f2b3",
    "location": "Redlands",
    "name": "untrue sparse comics",
    "shoreAccess": undefined,
    "updatedOn": 2024-05-27T07:14:30.481Z,
    "waterType": "mixed",
  },
  "tags": [],
  "timing": {
    "bottomTime": 3694,
    "duration": 4064,
    "entryTime": {
      "date": "2023-02-14T20:23:32",
      "timezone": "America/Anguilla",
    },
  },
  "updatedAt": undefined,
}
`;
